# scenenapse

./: .gitignore  PRESENTATION.md  README.md  SceneNapse.mp3.txt  SceneNapse.srt  main.py  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py  state.py
backend/: __init__.py  dspy_guardrails.py  dspy_pipeline.py  dspy_refinement.py  dspy_signatures.py  joy_quality.py  voice_assistant.py
data/failures/: 230fa3db-bd9d-45f9-8fbe-bd75798a66c4.json
frontend/: __init__.py  app.py  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/assemble/: route.ts
frontend/app/api/deselect-reference/: route.ts
frontend/app/api/generate/: route.ts
frontend/app/api/generate-images/: route.ts
frontend/app/api/generate-images-stream/: route.ts
frontend/app/api/refine/: route.ts
frontend/app/api/scene/: route.ts
frontend/app/api/scene/actions/: route.ts
frontend/app/api/scene/assembled/: route.ts
frontend/app/api/scene/cinematography/: route.ts
frontend/app/api/scene/elements/: route.ts
frontend/app/api/scene/objects/: route.ts
frontend/app/api/search-images/: route.ts
frontend/app/api/select-generated/: route.ts
frontend/app/api/select-reference/: route.ts
frontend/lib/: types.ts
output/: generations.csv
src/: __init__.py  collect_data.py  evaluators.py  fibo_generator.py  fibo_local_generator.py  gepa_trainer.py  joy_quality.py  nano_banana.py  prompt_optimizer.py  prompt_rewriter.py  server.py
