[project]
name = "scenenapse-studio"
version = "1.0.0"
description = "AI-powered cinematic scene composition using DSPy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "dspy-ai>=2.5.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "fal-client>=0.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
